# ft_transcendence

./: .env-sample  .gitignore  Makefile  README.md  docker-compose.yml  eloFormula.c  test.js
.github/workflows/: codeql.yml
backend/: .gitignore  Dockerfile  config.json  db.sql  entrypoint.sh  tsconfig.json
backend/src/: app.sqlite  hardhat.config.cts  hardhat.config.ts  package-lock.json  package.json  server.ts  tailwind.config.js  tsconfig.json
benchmark/: Dockerfile  entrypoint.sh
benchmark/src/: package-lock.json  package.json  tsconfig.json
cli/: Dockerfile  entrypoint.sh
cli-app/: Dockerfile  Readme.md  launch.sh
cli-app/src/: context.rs  friends.rs  game.rs  infos.rs  login.rs  main.rs  screen_displays.rs  utils.rs
cli-rust/: Dockerfile  entrypoint.sh  notes.text
cli-rust/serious/: Cargo.toml  notes.text  todo.text  tokio.text
cli-rust/serious/src/: friends.rs  game.rs  game_demo.rs  infos_events.rs  login.rs  main.rs  screen_displays.rs  welcome.rs
cli-rust/src/: package.json
docker/sqlite/: Dockerfile
elk/logstash/: log4j2.properties
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/conf/: entrypoint.sh  nginx.conf
frontend/frontend/: tailwind.config.js
frontend/src/: lobby.html  login.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/srcs/: Makefile  index.html  login.html  package-lock.json  tailwind.config.js  tsconfig.json
modsecurity/: Dockerfile
modsecurity/conf/: entrypoint.sh
smn_solidity/: package-lock.json  package.json
vault/conf/: entrypoint.sh  (+1 more)
(+247 files in other folders)
